@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-	<dllmap dll="pcsc">		
-	    <dllentry dll="libpcsclite.so" />
+	<dllmap dll="winscard">		
+	    <dllentry dll="libpcsclite.so.1" />
 	    <dllentry os="windows" dll="winscard.dll" />
 	    <!-- <dllentry os="windows"  dll="winscard.dll" /> -->
 	</dllmap>
