@@ -1,3 +1,14 @@
+2011-09-09  Armando Basile  <hmandevteam@gmail.com>
+
+	* comex-base.dll.config: - removed dependence from pcsc-lite
+	devel package
+	- changed alias (now also .Net see library)
+
+	* Src/Classes/Pcsc.cs: - changed DllImport alias (now also
+	.Net see library)
+
+	* Docs/readme: - added license information
+
 2011-09-02  Armando Basile  <hmandevteam@gmail.com>
 
 	* Src/Classes/GlobalObj.cs: - using comex-base for share
